@@ -53,11 +53,12 @@
         <class locator="reahl.doc.examples.tutorial.jobsbootstrap.jobsbootstrap:Address"/>
         <class locator="reahl.doc.examples.tutorial.tablebootstrap.tablebootstrap:Address"/>
         <class locator="reahl.doc.examples.tutorial.datatablebootstrap.datatablebootstrap:Address"/>
+        <class locator="reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:InvestmentOrder"/>
+        <class locator="reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:Allocation"/>
+        <class locator="reahl.doc.examples.howtos.paymentpaypal.paymentpaypal:ShoppingCart"/>
         <class locator="reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:InvestmentOrder"/>
         <class locator="reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:Allocation"/>
         <class locator="reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:IDDocument"/>
-        <class locator="reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:InvestmentOrder"/>
-        <class locator="reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:Allocation"/>
        </persisted>
 
   <schedule locator="reahl.doc.examples.tutorial.jobsbootstrap.jobsbootstrap:Address.clear_added_flags"/>
@@ -75,6 +76,7 @@
       <egg name="reahl-domainui" versionlocked="True"/>
       <egg name="reahl-commands" versionlocked="True"/>
       <egg name="reahl-dev" versionlocked="True"/>
+      <egg name="reahl-paypalsupport" versionlocked="True"/>
       <thirdpartyegg name="pytest" minversion="3.0"/>
       <thirdpartyegg name="setuptools" minversion="32.3.1"/>
       <thirdpartyegg name="plotly" minversion="5.1.0" maxversion="5.1.99999"/>
