@@ -1,2 +1,1 @@
   unit setup -- -q pytest --addopts '-s --pyargs paymentpaypal_dev'
-  demosetup setup -- -q pytest --addopts '-s -o python_functions=demo_setup --pyargs paymentpaypal_dev'
